k8s/singapore/canary/service-canary.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: table-search-prod-service-canary
  namespace: prod-ns
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp80
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: table-search-prod-canary
    version: v2
  sessionAffinity: None
  type: ClusterIP
