k8s/singapore/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/canary: 'true'
    alb.ingress.kubernetes.io/canary-by-header: X-Canary
    alb.ingress.kubernetes.io/canary-by-header-value: grey
    alb.ingress.kubernetes.io/order: '1'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
  labels:
    ingress-controller: alb
  name: table-search-prod-ingress-canary
  namespace: prod-ns
spec:
  ingressClassName: alb
  rules:
    - host: table-search.wispaper.inner
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: &default-backend
              service:
                name: table-search-prod-service-canary
                port:
                  number: 80
    - host: table-search.atominnolab.com
      http:
        paths:
          - backend:
              service:
                name: table-search-prod-service-canary
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - table-search.atominnolab.com
      secretName: tls-atominnolab.com
